# kairos_fulfillment

./: README.md  image_publisher.py
AGV/AGV_ctrl_PC/: aruco_marker_detect.py  calibration_params.yaml  line_detect.py  line_tracing.py  line_tracing_test.py  serial_communication.py  socket_video_server.py
AGV/AGV_ctrl_PC/packaging/: line_detect.py  serial_agv_server.py
AGV/ros2_ws/install/: local_setup.sh  setup.sh
Communication/: cobot_image_resive_server.py  from_import_to_export_server.py  joint_state_resive_server.py  state_pub.py  ui_export_server_sokect.py
MyCobot/cobot_yolo_pc/cobot_yolo_pc/: cobot_services_server.py  yolo_client.py
MyCobot/mycobot_interfaces/: CMakeLists.txt
MyCobot/mycobot_interfaces/srv/: DetectionRQ.srv  StateRQ.srv
MyCobot/mycobot_ros2_controll/: CMakeLists.txt  package.xml  setup.cfg  setup.py
MyCobot/mycobot_ros2_controll/config/: example.yaml
MyCobot/mycobot_ros2_controll/launch/: rviz_controll.launch.py  rviz_controll_vgripper.launch.py
MyCobot/mycobot_ros2_controll/mycobot_ros2_controll/: camera_pub.py  detect_cube_client.py  detect_cube_hsv.py  detect_cube_server.py  rviz_controll.py  rviz_controll_vgripper.py
MyCobot/mycobot_ros2_cpp_cnt/: CMakeLists.txt  package.xml
MyCobot/mycobot_ros2_cpp_cnt/src/: grip_task.cpp  grip_task.cpp.action  grip_test.cpp  grip_yolo_action.cpp  jacobian.cpp  marker_creater.cpp
MyCobot/mycobot_with_gripper/: CMakeLists.txt  package.xml
MyCobot/mycobot_with_gripper/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  mycobot_320.ros2_control.xacro  mycobot_320.srdf  mycobot_320.urdf.xacro  ros2_controllers.yaml  sensors_3d.yaml
MyCobot/mycobot_with_gripper/config/urdf/: base.stl  camera.stl  gripper_holder.stl  gripperlink.stl  hand_base_link.stl  hand_left_front.stl  hand_left_front_link.stl  hand_left_inside.stl  hand_left_outside.stl  hand_right_front.stl  hand_right_front_link.stl  hand_right_inside.stl  hand_right_outside.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  mycobot_320_m5_custom.urdf  mycobot_320_m5_vgripper.urdf
MyCobot/mycobot_with_gripper/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
MyCobot/mycobot_with_vgripper/: CMakeLists.txt  package.xml
MyCobot/mycobot_with_vgripper/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  mycobot_320.ros2_control.xacro  mycobot_320.srdf  mycobot_320.urdf.xacro  ros2_controllers.yaml
MyCobot/mycobot_with_vgripper/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
MyCobot/pc_ctrl/pc_ctrl/submodules/: ui_export_server_sokect.py
MyCobot/py_pubsub/: package.xml  setup.py
MyCobot/py_pubsub/py_pubsub/: subscriber_member_function.py
MyCobot/zkrobot_ctrl/: setup.cfg  setup.py
MyCobot/zkrobot_ctrl/zkrobot_ctrl/: zkrobot_server_sokect.py
PC/pc_ctrl/: setup.cfg
Packaging/: final_project.ino
Packaging/final_project/: final_project.state  final_project.xgwx  final_project.xgwx_bkx0  final_project.xgwx_bkx1  final_project.xgwx_bkx2
ZKrobot/move_logic/mainbody_logic/: mainbody_logic.ino
ZKrobot/move_logic/zkrobot_logic/: zkrobot_logic.ino
ZKrobot/zkrobot_ctrl/zkrobot_ctrl/: ChatServer.py  zkrobot_client.py  zkrobot_mqtt_client.py  zkrobot_server.py
cobot_yolo_pc/: package.xml  setup.cfg  setup.py
cobot_yolo_pc/cobot_yolo_pc/: cobot_services_client.py  yolo_detection_service.py
mycobot_ros2_cpp_cnt/: CMakeLists.txt  package.xml
mycobot_ros2_cpp_cnt/src/: grip_test.cpp  grip_with_yolo.cpp
pc_ctrl/: package.xml  setup.py
pc_ctrl/pc_ctrl/: robot_ctrl.py  zkrobot_client_soket.py
pc_ctrl/pc_ctrl/submodules/: from_import_to_export_client.py  zkrobot_server.py
py_pubsub/py_pubsub/: publisher_member_function.py
unity-project/: README.md
unity-project/test_ros/.plastic/: plastic.changes  plastic.selector  plastic.wktree  plastic.workspace
unity-project/test_ros/Assets/: msgbrowser_settings.asset
unity-project/test_ros/Assets/Resources/: ROSConnectionPrefab.prefab  desk_mat.mat  dest_mat.mat  floor.mat  line_mat.mat
unity-project/test_ros/Assets/Scenes/: SampleScene.unity
unity-project/test_ros/ProjectSettings/: ProjectSettings.asset
unity-project/test_ros/Temp/: workerlic
web/: export.php  import.php
zkrobot_ctrl/: package.xml
zkrobot_ctrl/zkrobot_ctrl/: test.py  zkrobot_client_soket.py
(+62 files in other folders)
